// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APISectionUtils.CommentTextBlock component basic comment 1`] = `
<div>
  <p
    class="css-1a1x0ox-TextComponent"
    data-text="true"
  >
    This is the basic comment.
  </p>
</div>
`;

exports[`APISectionUtils.CommentTextBlock component basic inline comment 1`] = `
<div>
   - 
  <span>
    This is the basic comment.
  </span>
</div>
`;

exports[`APISectionUtils.CommentTextBlock component comment with example 1`] = `
<div>
  <p
    class="css-1a1x0ox-TextComponent"
    data-text="true"
  >
    <strong
      class="css-7r3rok-TextComponent"
    >
      Android only.
    </strong>
     Gets the referrer URL of the installed app with the 
    <a
      class="css-dqmbnf-A"
      href="https://developer.android.com/google/play/installreferrer"
      rel="noopener noreferrer"
      target="_blank"
    >
      <code
        class="css-yrev4b-TextComponent"
        data-text="true"
      >
        Install Referrer API
      </code>
    </a>
    
from the Google Play Store. In practice, the referrer URL may not be a complete, absolute URL.
  </p>
  <div
    class="css-1wdnwk5"
  >
    <h4
      class="css-uucypz-H4"
      data-heading="true"
    >
      Example
    </h4>
  </div>
  <pre>
    <pre
      class="css-p0nog9"
      data-text="true"
    >
      <code
        class="css-3rj4bb"
      >
        <span
          class="token keyword"
        >
          await
        </span>
         
        <span
          class="token maybe-class-name"
        >
          Application
        </span>
        <span
          class="token punctuation"
        >
          .
        </span>
        <span
          class="token method function property-access"
        >
          getInstallReferrerAsync
        </span>
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
        <span
          class="token punctuation"
        >
          ;
        </span>
        

        <span
          class="token comment"
        >
          // "utm_source=google-play&utm_medium=organic"
        </span>
        

      </code>
    </pre>
  </pre>
</div>
`;

exports[`APISectionUtils.CommentTextBlock component no comment 1`] = `<div />`;

exports[`APISectionUtils.resolveTypeName Promise 1`] = `
<div>
  <a
    class="css-dqmbnf-A"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  &lt;
  <span>
    void
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName Promise with custom type 1`] = `
<div>
  <a
    class="css-dqmbnf-A"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  &lt;
  <span>
    <a
      class="css-dqmbnf-A"
      href="#appleauthenticationcredential"
    >
      AppleAuthenticationCredential
    </a>
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName Record 1`] = `
<div>
  Record
  &lt;
  <span>
    string
    , 
  </span>
  <span>
    any
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName Record with union 1`] = `
<div>
  Record
  &lt;
  <span>
    string
    , 
  </span>
  <span>
    <span>
      number
       | 
    </span>
    <span>
      boolean
       | 
    </span>
    <span>
      string
    </span>
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName alternative generic object notation 1`] = `
<div>
  { [column]: any }
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type 1`] = `
<div>
  <a
    class="css-dqmbnf-A"
    href="#speechsynthesisevent"
  >
    SpeechSynthesisEvent
  </a>
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type array 1`] = `
<div>
  <a
    class="css-dqmbnf-A"
    href="#appleauthenticationscope"
  >
    AppleAuthenticationScope
    []
  </a>
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type non-linkable array 1`] = `
<div>
  T[]
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type with single pick 1`] = `
<div>
  <a
    class="css-dqmbnf-A"
    href="https://www.typescriptlang.org/docs/handbook/utility-types.html#picktype-keys"
    rel="noopener noreferrer"
    target="_blank"
  >
    Pick
  </a>
  &lt;
  <span>
    <a
      class="css-dqmbnf-A"
      href="#fontresource"
    >
      FontResource
    </a>
    , 
  </span>
  <span>
    'display'
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName function 1`] = `
<div>
  () =&gt;
   
  <span>
    void
     | 
  </span>
  <span>
    <a
      class="css-dqmbnf-A"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName function with arguments 1`] = `
<div>
  (
  <span>
    error
    : 
    <a
      class="css-dqmbnf-A"
      href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error"
      rel="noopener noreferrer"
      target="_blank"
    >
      Error
    </a>
  </span>
  ) 
  =&gt;
   
  <span>
    void
     | 
  </span>
  <span>
    <a
      class="css-dqmbnf-A"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName function with non-linkable custom type 1`] = `
<div>
  (
  <span>
    error
    : 
    <a
      class="css-dqmbnf-A"
      href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error"
      rel="noopener noreferrer"
      target="_blank"
    >
      Error
    </a>
  </span>
  ) 
  =&gt;
   
  void
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type 1`] = `
<div>
  string
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type 2`] = `
<div>
  <a
    class="css-dqmbnf-A"
    href="#pagedinfo"
  >
    PagedInfo
  </a>
  &lt;
  <span>
    <a
      class="css-dqmbnf-A"
      href="#asset"
    >
      Asset
    </a>
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type in Promise 1`] = `
<div>
  <a
    class="css-dqmbnf-A"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  &lt;
  <span>
    <a
      class="css-dqmbnf-A"
      href="#pagedinfo"
    >
      PagedInfo
    </a>
    &lt;
    <span>
      <a
        class="css-dqmbnf-A"
        href="#asset"
      >
        Asset
      </a>
    </span>
    &gt;
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName object reflection 1`] = `
<div>
  {

  <span>
      
    target: 
    number
    , 
    

  </span>
  <span>
      
    value: 
    boolean
    

  </span>
  }
</div>
`;

exports[`APISectionUtils.resolveTypeName props with multiple omits 1`] = `
<div>
  StyleProp
  &lt;
  <span>
    <a
      class="css-dqmbnf-A"
      href="https://www.typescriptlang.org/docs/handbook/utility-types.html#omittype-keys"
      rel="noopener noreferrer"
      target="_blank"
    >
      Omit
    </a>
    &lt;
    <span>
      <a
        class="css-dqmbnf-A"
        href="/versions/latest/react-native/view-style-props"
      >
        ViewStyle
      </a>
      , 
    </span>
    <span>
      <span>
        'backgroundColor'
         | 
      </span>
      <span>
        'borderRadius'
      </span>
    </span>
    &gt;
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName query type 1`] = `
<div>
  React.ComponentProps
  &lt;
  <span>
    View
  </span>
  &gt;
</div>
`;

exports[`APISectionUtils.resolveTypeName tuple type 1`] = `
<div>
  [
  <span>
    <a
      class="css-dqmbnf-A"
      href="#sortbykey"
    >
      SortByKey
    </a>
    , 
  </span>
  <span>
    boolean
  </span>
  ]
</div>
`;

exports[`APISectionUtils.resolveTypeName union 1`] = `
<div>
  <span>
    <a
      class="css-dqmbnf-A"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
     | 
  </span>
  <span>
    null
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName union of array values 1`] = `
<div>
  (
  <span>
    <a
      class="css-dqmbnf-A"
      href="#resultseterror"
    >
      ResultSetError
    </a>
     | 
  </span>
  <span>
    <a
      class="css-dqmbnf-A"
      href="#resultset"
    >
      ResultSet
    </a>
  </span>
  )
  []
</div>
`;

exports[`APISectionUtils.resolveTypeName union with array 1`] = `
<div>
  <span>
    number[]
     | 
  </span>
  <span>
    null
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName union with custom type and array 1`] = `
<div>
  <span>
    <a
      class="css-dqmbnf-A"
      href="#assetref"
    >
      AssetRef
      []
    </a>
     | 
  </span>
  <span>
    <a
      class="css-dqmbnf-A"
      href="#assetref"
    >
      AssetRef
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName void 1`] = `
<div>
  void
</div>
`;
